iptables-whitelist
# Generated by iptables-save v1.8.0 on Sat Feb  9 18:18:17 2019
*nat
:PREROUTING ACCEPT [110571:34381961]
:INPUT ACCEPT [1639:97052]
:OUTPUT ACCEPT [67495:4558287]
:POSTROUTING ACCEPT [65350:4283992]
:OUTPUT_direct - [0:0]
:POSTROUTING_ZONES - [0:0]
:POSTROUTING_ZONES_SOURCE - [0:0]
:POSTROUTING_direct - [0:0]
:POST_FedoraServer - [0:0]
:POST_FedoraServer_allow - [0:0]
:POST_FedoraServer_deny - [0:0]
:POST_FedoraServer_log - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_FedoraServer - [0:0]
:PRE_FedoraServer_allow - [0:0]
:PRE_FedoraServer_deny - [0:0]
:PRE_FedoraServer_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A POSTROUTING -j POSTROUTING_direct
-A POSTROUTING -j POSTROUTING_ZONES_SOURCE
-A POSTROUTING -j POSTROUTING_ZONES
-A POSTROUTING_ZONES -o enp2s0 -g POST_FedoraServer
-A POSTROUTING_ZONES -g POST_FedoraServer
-A POST_FedoraServer -j POST_FedoraServer_log
-A POST_FedoraServer -j POST_FedoraServer_deny
-A POST_FedoraServer -j POST_FedoraServer_allow
-A PREROUTING_ZONES -i enp2s0 -g PRE_FedoraServer
-A PREROUTING_ZONES -g PRE_FedoraServer
-A PRE_FedoraServer -j PRE_FedoraServer_log
-A PRE_FedoraServer -j PRE_FedoraServer_deny
-A PRE_FedoraServer -j PRE_FedoraServer_allow
COMMIT
# Completed on Sat Feb  9 18:18:17 2019
# Generated by iptables-save v1.8.0 on Sat Feb  9 18:18:17 2019
*mangle
:PREROUTING ACCEPT [894662:955357770]
:INPUT ACCEPT [894662:955357770]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [816140:334506760]
:POSTROUTING ACCEPT [847716:337876420]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
:POSTROUTING_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_FedoraServer - [0:0]
:PRE_FedoraServer_allow - [0:0]
:PRE_FedoraServer_deny - [0:0]
:PRE_FedoraServer_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
-A POSTROUTING -j POSTROUTING_direct
-A PREROUTING_ZONES -i enp2s0 -g PRE_FedoraServer
-A PREROUTING_ZONES -g PRE_FedoraServer
-A PRE_FedoraServer -j PRE_FedoraServer_log
-A PRE_FedoraServer -j PRE_FedoraServer_deny
-A PRE_FedoraServer -j PRE_FedoraServer_allow
COMMIT
# Completed on Sat Feb  9 18:18:17 2019
# Generated by iptables-save v1.8.0 on Sat Feb  9 18:18:17 2019
*raw
:PREROUTING ACCEPT [894665:955358700]
:OUTPUT ACCEPT [816146:334507110]
:OUTPUT_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_FedoraServer - [0:0]
:PRE_FedoraServer_allow - [0:0]
:PRE_FedoraServer_deny - [0:0]
:PRE_FedoraServer_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A PREROUTING_ZONES -i enp2s0 -g PRE_FedoraServer
-A PREROUTING_ZONES -g PRE_FedoraServer
-A PRE_FedoraServer -j PRE_FedoraServer_log
-A PRE_FedoraServer -j PRE_FedoraServer_deny
-A PRE_FedoraServer -j PRE_FedoraServer_allow
COMMIT
# Completed on Sat Feb  9 18:18:17 2019
# Generated by iptables-save v1.8.0 on Sat Feb  9 18:18:17 2019
*security
:INPUT ACCEPT [754154:917703475]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [816146:334507110]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Sat Feb  9 18:18:17 2019
# Generated by iptables-save v1.8.0 on Sat Feb  9 18:18:17 2019
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [30946:4826165]
:FORWARD_IN_ZONES - [0:0]
:FORWARD_IN_ZONES_SOURCE - [0:0]
:FORWARD_OUT_ZONES - [0:0]
:FORWARD_OUT_ZONES_SOURCE - [0:0]
:FORWARD_direct - [0:0]
:FWDI_FedoraServer - [0:0]
:FWDI_FedoraServer_allow - [0:0]
:FWDI_FedoraServer_deny - [0:0]
:FWDI_FedoraServer_log - [0:0]
:FWDO_FedoraServer - [0:0]
:FWDO_FedoraServer_allow - [0:0]
:FWDO_FedoraServer_deny - [0:0]
:FWDO_FedoraServer_log - [0:0]
:INPUT_ZONES - [0:0]
:INPUT_ZONES_SOURCE - [0:0]
:INPUT_direct - [0:0]
:IN_FedoraServer - [0:0]
:IN_FedoraServer_allow - [0:0]
:IN_FedoraServer_deny - [0:0]
:IN_FedoraServer_log - [0:0]
:LOGIPS - [0:0]
:OUTPUT_direct - [0:0]
# >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-N LOG_ACCEPT
-A LOG_ACCEPT -j LOG --log-prefix "INPUT:ACCEPT:" --log-level 6
-A LOG_ACCEPT -j ACCEPT
# >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-N LOG_REJECT
-A LOG_REJECT -j LOG --log-prefix "INPUT:REJECT:" --log-level 6
-A LOG_REJECT -j REJECT --reject-with icmp-host-prohibited
# >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
-N LOG_ACCEPT_LO
#-A LOG_REJECT_LO -j LOG --log-prefix "INPUT:REJECT:" --log-level 6
-A LOG_ACCEPT_LO -j ACCEPT 
#>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
# >>>>>>>>>>>>>> Allow selected IPs
-A LOG_ACCEPT -s 188.122.149.74 
-A LOG_ACCEPT -s 83.253.193.122 
-A LOG_ACCEPT -s 185.154.111.4 
-A INPUT -m state --state NEW -m tcp -p tcp --dport 3000 -j ACCEPT
# >>>>>>>>>>>>>> Apply IPSET BlockCNTY set by /etc/blocklist.sh
#-A INPUT -i lo -p tcp --dport 32400 -j LOG --log-prefix='**LOplex32400**'
#>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
#-A INPUT -p tcp --dport 32400 -j LOG --log-prefix='**PLEX32400**'
-A LOG_ACCEPT_LO -i lo  
-A LOG_ACCEPT -m set --match-set whitelist src 
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
#-A INPUT -i lo -j ACCEPT
-A INPUT -j INPUT_direct
-A INPUT -j INPUT_ZONES_SOURCE
-A INPUT -j INPUT_ZONES
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A LOG_REJECT 
# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
-A OUTPUT -p tcp -m state --state NEW,ESTABLISHED -j ACCEPT 
-A OUTPUT -p udp -m state --state NEW,ESTABLISHED -j ACCEPT 
# >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i lo -j ACCEPT
-A FORWARD -j FORWARD_direct
-A FORWARD -j FORWARD_IN_ZONES_SOURCE
-A FORWARD -j FORWARD_IN_ZONES
-A FORWARD -j FORWARD_OUT_ZONES_SOURCE
-A FORWARD -j FORWARD_OUT_ZONES
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A OUTPUT -j OUTPUT_direct
-A FORWARD_IN_ZONES -i enp2s0 -g FWDI_FedoraServer
-A FORWARD_IN_ZONES -g FWDI_FedoraServer
-A FORWARD_OUT_ZONES -o enp2s0 -g FWDO_FedoraServer
-A FORWARD_OUT_ZONES -g FWDO_FedoraServer
-A FWDI_FedoraServer -j FWDI_FedoraServer_log
-A FWDI_FedoraServer -j FWDI_FedoraServer_deny
-A FWDI_FedoraServer -j FWDI_FedoraServer_allow
-A FWDI_FedoraServer -p icmp -j ACCEPT
-A FWDO_FedoraServer -j FWDO_FedoraServer_log
-A FWDO_FedoraServer -j FWDO_FedoraServer_deny
-A FWDO_FedoraServer -j FWDO_FedoraServer_allow
-A INPUT_ZONES -i enp2s0 -g IN_FedoraServer
-A INPUT_ZONES -g IN_FedoraServer
-A IN_FedoraServer -j IN_FedoraServer_log
-A IN_FedoraServer -j IN_FedoraServer_deny
-A IN_FedoraServer -j IN_FedoraServer_allow
-A IN_FedoraServer -p icmp -j ACCEPT
-A IN_FedoraServer_allow -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_FedoraServer_allow -p tcp -m tcp --dport 9090 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
#New
-A IN_FedoraServer_allow -p udp -m udp --dport 1025:65535 -m conntrack --ctstate NEW -j ACCEPT
-A IN_FedoraServer_allow -p tcp -m tcp --dport 1025:65535 -m conntrack --ctstate NEW -j ACCEPT
#
-A LOGIPS -m limit --limit 3/min -j LOG --log-prefix "IPS REJECT: " --log-level 6
-A LOGIPS -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Sat Feb  9 18:18:17 2019
